--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -1,17 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821" />
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="HkwgConverter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
+  <!-- Log4net Logging Setup -->
+  <log4net>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender" >
+      <file value="C:\temp\logs\hkwg.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Once" />
+      <maxSizeRollBackups value="5" />
+      <staticLogFileName value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      </layout>
+    </appender>       
+    <root>
+      <level value="DEBUG"/>
+      <appender-ref ref="RollingFileAppender"/>
+    </root>
+  </log4net>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <applicationSettings>
         <HkwgConverter.Settings>
-            <setting name="InputFolder" serializeAs="String">
+            <setting name="InputWatchFolder" serializeAs="String">
                 <value>D:\Projekte\HkwgConverter\HkwgConverter\Sample\Input\</value>
+            </setting>
+            <setting name="InputSuccessFolder" serializeAs="String">
+                <value>D:\Projekte\HkwgConverter\HkwgConverter\Sample\Input\OK</value>
+            </setting>
+            <setting name="InputErrorFolder" serializeAs="String">
+                <value>D:\Projekte\HkwgConverter\HkwgConverter\Sample\Input\NOK</value>
             </setting>
         </HkwgConverter.Settings>
     </applicationSettings>
