--- a/HkwgConverter/HkwgConverter.csproj
+++ b/HkwgConverter/HkwgConverter.csproj
@@ -41,6 +41,10 @@
       <HintPath>..\packages\DocumentFormat.OpenXml.2.5\lib\DocumentFormat.OpenXml.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="log4net, Version=2.0.7.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.7\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -52,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\FileMonitor.cs" />
     <Compile Include="Model\ConstantsSale.cs" />
     <Compile Include="Core\InputConverter.cs" />
     <Compile Include="Model\HkwgInputItem.cs" />
@@ -75,7 +80,6 @@
     <None Include="Sample\Anmeldung_20161212_11XSWCOTTBUS---M_11XENVIAMBILANZD_V0051.xlsx" />
     <None Include="Sample\Cottbus_DayAhead_20160930_20160930075200_20160930075203730.csv" />
     <None Include="Sample\Input\Cottbus_DayAhead_20160930_20160930075200_20160930075203730.csv" />
-    <None Include="Sample\KISS-Template.xlsx" />
     <None Include="Sample\OB_NewSchedule_20160705_20160704050122_+02.csv" />
     <None Include="Sample\Template_Kiss_Input.xlsx" />
     <None Include="Settings.settings">
