added helper batch file
added helper batch file

Squashed commit of the following:

commit b14f7a24691ec7ee69a501907df8891dd3a753bd
Author: Penny79 <Ralf.Hoeppner@gmail.com>
Date:   Tue Feb 7 10:52:42 2017 +0100

    added data accessor

commit 85a6f28eda5036c91642a382c1435b5efc52e312
Author: Penny79 <Ralf.Hoeppner@gmail.com>
Date:   Tue Feb 7 10:48:56 2017 +0100

    Switched to batch-style, added version support and input file logging

Switched to batch-style, added version support and input file logging

added data accessor

--- a/HkwgConverter/Settings.settings
+++ b/HkwgConverter/Settings.settings
@@ -3,13 +3,16 @@
   <Profiles />
   <Settings>
     <Setting Name="InputWatchFolder" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">D:\Projekte\HkwgConverter\HkwgConverter\Sample\Input\</Value>
+      <Value Profile="(Default)">D:\FileStore\Input\</Value>
     </Setting>
     <Setting Name="InputSuccessFolder" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">D:\Projekte\HkwgConverter\HkwgConverter\Sample\Input\OK</Value>
+      <Value Profile="(Default)">D:\FileStore\Input\OK\</Value>
     </Setting>
     <Setting Name="InputErrorFolder" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">D:\Projekte\HkwgConverter\HkwgConverter\Sample\Input\NOK</Value>
+      <Value Profile="(Default)">D:\FileStore\Input\NOK\</Value>
+    </Setting>
+    <Setting Name="AppDataFolder" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">D:\FileStore\AppData\</Value>
     </Setting>
   </Settings>
 </SettingsFile>
