--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -7,21 +7,45 @@
         </sectionGroup>
     </configSections>
   <!-- Log4net Logging Setup -->
-  <log4net>
-    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender" >
-      <file value="C:\temp\logs\hkwg.log" />
+  <log4net>    
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="C:\temp\logs\hkwg.log" />
       <appendToFile value="true" />
-      <rollingStyle value="Once" />
-      <maxSizeRollBackups value="5" />
+      <rollingStyle value="Date" />
+      <maximumFileSize value="30MB" />
       <staticLogFileName value="true" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <preserveLogFileNameExtension value="true"/>
+      <datePattern value="ddMMyyyy" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
       </layout>
-    </appender>       
+    </appender>    
+    <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+      <mapping>
+        <level value="DEBUG" />
+        <backColor value="Green" />
+      </mapping>
+      <mapping>
+        <level value="INFO" />
+        <backColor value="Green" />
+      </mapping>
+      <mapping>
+        <level value="WARN" />
+        <backColor value="YELLOW" />
+      </mapping>
+      <mapping>
+        <level value="ERROR" />
+        <foreColor value="White" />
+        <backColor value="Red, HighIntensity" />
+      </mapping>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+    </appender>
     <root>
       <level value="DEBUG"/>
       <appender-ref ref="RollingFileAppender"/>
+      <appender-ref ref="ColoredConsoleAppender"/>
     </root>
   </log4net>
     <startup> 
@@ -30,13 +54,16 @@
     <applicationSettings>
         <HkwgConverter.Settings>
             <setting name="InputWatchFolder" serializeAs="String">
-                <value>D:\Projekte\HkwgConverter\HkwgConverter\Sample\Input\</value>
+                <value>D:\FileStore\Input\</value>
             </setting>
             <setting name="InputSuccessFolder" serializeAs="String">
-                <value>D:\Projekte\HkwgConverter\HkwgConverter\Sample\Input\OK</value>
+                <value>D:\FileStore\Input\OK\</value>
             </setting>
             <setting name="InputErrorFolder" serializeAs="String">
-                <value>D:\Projekte\HkwgConverter\HkwgConverter\Sample\Input\NOK</value>
+                <value>D:\FileStore\Input\NOK\</value>
+            </setting>
+            <setting name="AppDataFolder" serializeAs="String">
+                <value>D:\FileStore\AppData\</value>
             </setting>
         </HkwgConverter.Settings>
     </applicationSettings>
