Added some docs

--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -53,14 +53,23 @@
     </startup>
     <applicationSettings>
         <HkwgConverter.Settings>
-            <setting name="InputWatchFolder" serializeAs="String">
-                <value>D:\FileStore\Input\</value>
+            <setting name="InboundWatchFolder" serializeAs="String">
+                <value>D:\FileStore\Inbound\</value>
             </setting>
-            <setting name="InputSuccessFolder" serializeAs="String">
-                <value>D:\FileStore\Input\OK\</value>
+            <setting name="InboundSuccessFolder" serializeAs="String">
+                <value>D:\FileStore\Inbound\OK\</value>
             </setting>
-            <setting name="InputErrorFolder" serializeAs="String">
-                <value>D:\FileStore\Input\NOK\</value>
+            <setting name="InboundErrorFolder" serializeAs="String">
+                <value>D:\FileStore\Inbound\NOK\</value>
+            </setting>
+            <setting name="OutboundWatchFolder" serializeAs="String">
+                <value>D:\FileStore\Outbound\</value>
+            </setting>
+            <setting name="OutboundSuccessFolder" serializeAs="String">
+                <value>D:\FileStore\Outbound\OK\</value>
+            </setting>
+            <setting name="OutboundErrorFolder" serializeAs="String">
+                <value>D:\FileStore\Outbound\NOK\</value>
             </setting>
             <setting name="AppDataFolder" serializeAs="String">
                 <value>D:\FileStore\AppData\</value>
