Added CSV File Writing

--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -71,7 +71,7 @@
             <setting name="OutboundErrorFolder" serializeAs="String">
                 <value>D:\FileStore\Outbound\NOK\</value>
             </setting>
-            <setting name="AppDataFolder" serializeAs="String">
+            <setting name="WorkflowStoreFolder" serializeAs="String">
                 <value>D:\FileStore\AppData\</value>
             </setting>
         </HkwgConverter.Settings>
