--- a/HkwgConverter/Settings.settings
+++ b/HkwgConverter/Settings.settings
@@ -20,7 +20,7 @@
     <Setting Name="OutboundErrorFolder" Type="System.String" Scope="Application">
       <Value Profile="(Default)">D:\FileStore\Outbound\NOK\</Value>
     </Setting>
-    <Setting Name="AppDataFolder" Type="System.String" Scope="Application">
+    <Setting Name="WorkflowStoreFolder" Type="System.String" Scope="Application">
       <Value Profile="(Default)">D:\FileStore\AppData\</Value>
     </Setting>
   </Settings>
