--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -1,45 +1,45 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821" />
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="HkwgConverter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821"/>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="HkwgConverter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
   <!-- Log4net Logging Setup -->
   <log4net>    
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file type="log4net.Util.PatternString" value="C:\temp\logs\hkwg.log" />
-      <appendToFile value="true" />
-      <rollingStyle value="Date" />
-      <maximumFileSize value="30MB" />
-      <staticLogFileName value="true" />
+      <file type="log4net.Util.PatternString" value="C:\temp\logs\hkwg.log"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Date"/>
+      <maximumFileSize value="30MB"/>
+      <staticLogFileName value="true"/>
       <preserveLogFileNameExtension value="true"/>
-      <datePattern value="ddMMyyyy" />
+      <datePattern value="ddMMyyyy"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
       </layout>
     </appender>    
     <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
       <mapping>
-        <level value="DEBUG" />
-        <backColor value="Green" />
+        <level value="DEBUG"/>
+        <backColor value="Green"/>
       </mapping>
       <mapping>
-        <level value="INFO" />
-        <backColor value="Green" />
+        <level value="INFO"/>
+        <backColor value="Green"/>
       </mapping>
       <mapping>
-        <level value="WARN" />
-        <backColor value="YELLOW" />
+        <level value="WARN"/>
+        <backColor value="YELLOW"/>
       </mapping>
       <mapping>
-        <level value="ERROR" />
-        <foreColor value="White" />
-        <backColor value="Red, HighIntensity" />
+        <level value="ERROR"/>
+        <foreColor value="White"/>
+        <backColor value="Red, HighIntensity"/>
       </mapping>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline"/>
       </layout>
     </appender>
     <root>
@@ -49,7 +49,7 @@
     </root>
   </log4net>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
     <applicationSettings>
         <HkwgConverter.Settings>
