--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -1,78 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821"/>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="HkwgConverter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
-  <!-- Log4net Logging Setup -->
-  <log4net>    
-    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file type="log4net.Util.PatternString" value="C:\temp\logs\hkwg.log"/>
-      <appendToFile value="true"/>
-      <rollingStyle value="Date"/>
-      <maximumFileSize value="30MB"/>
-      <staticLogFileName value="true"/>
-      <preserveLogFileNameExtension value="true"/>
-      <datePattern value="ddMMyyyy"/>
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
-      </layout>
-    </appender>    
-    <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
-      <mapping>
-        <level value="DEBUG"/>
-        <backColor value="Green"/>
-      </mapping>
-      <mapping>
-        <level value="INFO"/>
-        <backColor value="Green"/>
-      </mapping>
-      <mapping>
-        <level value="WARN"/>
-        <backColor value="YELLOW"/>
-      </mapping>
-      <mapping>
-        <level value="ERROR"/>
-        <foreColor value="White"/>
-        <backColor value="Red, HighIntensity"/>
-      </mapping>
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline"/>
-      </layout>
-    </appender>
-    <root>
-      <level value="DEBUG"/>
-      <appender-ref ref="RollingFileAppender"/>
-      <appender-ref ref="ColoredConsoleAppender"/>
-    </root>
-  </log4net>
+
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+
+    <targets>
+   
+      <target name="coloredConsole" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="false"
+         layout="${longdate}|${pad:padding=5:inner=${level:uppercase=true}}|${message}" >
+        <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
+        <highlight-row condition="level == LogLevel.Info" foregroundColor="Black" backgroundColor="DarkGreen"/>
+        <highlight-row condition="level == LogLevel.Warn" foregroundColor="Black" backgroundColor="Yellow" />
+        <highlight-row condition="level == LogLevel.Error" foregroundColor="White" backgroundColor="Red" />
+        <highlight-row condition="level == LogLevel.Fatal" foregroundColor="White" backgroundColor="Red" />
+      </target>
+      <target name="logfile" xsi:type="File"
+            layout="${longdate} ${logger} ${message}"
+            fileName="c:\HkwgConverter\Logs\logfile_${shortdate}.log" />
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Info" writeTo="logfile" />
+      <logger name="*" minlevel="Info" writeTo="coloredConsole" />
+    </rules>
+  </nlog>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
     </startup>
     <applicationSettings>
         <HkwgConverter.Settings>
             <setting name="InboundWatchFolder" serializeAs="String">
-                <value>D:\FileStore\Inbound\</value>
+                <value>C:\HkwgConverter\Inbound\</value>
             </setting>
             <setting name="InboundSuccessFolder" serializeAs="String">
-                <value>D:\FileStore\Inbound\OK\</value>
+                <value>C:\HkwgConverter\Inbound\OK\</value>
             </setting>
             <setting name="InboundErrorFolder" serializeAs="String">
-                <value>D:\FileStore\Inbound\NOK\</value>
+                <value>C:\HkwgConverter\Inbound\NOK\</value>
+            </setting>
+            <setting name="InboundDropFolder" serializeAs="String">
+                <value>C:\HkwgConverter\Inbound\Drop\</value>
             </setting>
             <setting name="OutboundWatchFolder" serializeAs="String">
-                <value>D:\FileStore\Outbound\</value>
+                <value>C:\HkwgConverter\Outbound\</value>
             </setting>
             <setting name="OutboundSuccessFolder" serializeAs="String">
-                <value>D:\FileStore\Outbound\OK\</value>
+                <value>C:\HkwgConverter\Outbound\OK\</value>
             </setting>
             <setting name="OutboundErrorFolder" serializeAs="String">
-                <value>D:\FileStore\Outbound\NOK\</value>
+                <value>C:\HkwgConverter\Outbound\NOK\</value>
+            </setting>
+            <setting name="OutboundDropFolder" serializeAs="String">
+                <value>C:\HkwgConverter\Outbound\Drop\</value>
             </setting>
             <setting name="WorkflowStoreFolder" serializeAs="String">
-                <value>D:\FileStore\AppData\</value>
+                <value>C:\HkwgConverter\AppData\</value>
             </setting>
         </HkwgConverter.Settings>
     </applicationSettings>
