--- a/HkwgConverter/packages.config
+++ b/HkwgConverter/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="ClosedXML" version="0.86.0" targetFramework="net452" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net452" />
-  <package id="log4net" version="2.0.7" targetFramework="net452" />
+  <package id="NLog" version="4.4.3" targetFramework="net40-client" />
 </packages>
