Implemented additional Console.Logging for troubleshooting purposes

--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -6,27 +6,30 @@
             <section name="HkwgConverter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
-
-  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <system.diagnostics>
+    <trace autoflush="true">
+      <listeners>
+        <add name="logListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="cat.log" />
+        <add name="consoleListener" type="System.Diagnostics.ConsoleTraceListener"/>
+      </listeners>
+    </trace>
+  </system.diagnostics>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <targets>
    
-      <target name="coloredConsole" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="false"
-         layout="${longdate}|${pad:padding=5:inner=${level:uppercase=true}}|${message}" >
-        <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
+      <target name="coloredConsole" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="false" layout="${longdate}|${pad:padding=5:inner=${level:uppercase=true}}|${message}">
+        <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray"/>
         <highlight-row condition="level == LogLevel.Info" foregroundColor="Black" backgroundColor="DarkGreen"/>
-        <highlight-row condition="level == LogLevel.Warn" foregroundColor="Black" backgroundColor="Yellow" />
-        <highlight-row condition="level == LogLevel.Error" foregroundColor="White" backgroundColor="Red" />
-        <highlight-row condition="level == LogLevel.Fatal" foregroundColor="White" backgroundColor="Red" />
+        <highlight-row condition="level == LogLevel.Warn" foregroundColor="Black" backgroundColor="Yellow"/>
+        <highlight-row condition="level == LogLevel.Error" foregroundColor="White" backgroundColor="Red"/>
+        <highlight-row condition="level == LogLevel.Fatal" foregroundColor="White" backgroundColor="Red"/>
       </target>
-      <target name="logfile" xsi:type="File"
-            layout="${longdate} ${logger} ${message}"
-            fileName="c:\HkwgConverter\Logs\logfile_${shortdate}.log" />
+      <target name="logfile" xsi:type="File" layout="${longdate} ${logger} ${message}" fileName="c:\HkwgConverter\Logs\logfile_${shortdate}.log"/>
     </targets>
     <rules>
-      <logger name="*" minlevel="Info" writeTo="logfile" />
-      <logger name="*" minlevel="Info" writeTo="coloredConsole" />
+      <logger name="*" minlevel="Info" writeTo="logfile"/>
+      <logger name="*" minlevel="Info" writeTo="coloredConsole"/>
     </rules>
   </nlog>
     <startup> 
@@ -60,6 +63,9 @@
             </setting>
             <setting name="WorkflowStoreFolder" serializeAs="String">
                 <value>C:\HkwgConverter\AppData\</value>
+            </setting>
+            <setting name="UseConsole" serializeAs="String">
+                <value>True</value>
             </setting>
         </HkwgConverter.Settings>
     </applicationSettings>
