--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -1,16 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="HkwgConverter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+            <section name="HkwgConverter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
   <system.diagnostics>
     <trace autoflush="true">
       <listeners>
         <add name="logListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="cat.log" />
-        <add name="consoleListener" type="System.Diagnostics.ConsoleTraceListener"/>
+        <add name="consoleListener" type="System.Diagnostics.ConsoleTraceListener" />
       </listeners>
     </trace>
   </system.diagnostics>
@@ -19,21 +19,21 @@
     <targets>
    
       <target name="coloredConsole" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="false" layout="${longdate}|${pad:padding=5:inner=${level:uppercase=true}}|${message}">
-        <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray"/>
-        <highlight-row condition="level == LogLevel.Info" foregroundColor="Black" backgroundColor="DarkGreen"/>
-        <highlight-row condition="level == LogLevel.Warn" foregroundColor="Black" backgroundColor="Yellow"/>
-        <highlight-row condition="level == LogLevel.Error" foregroundColor="White" backgroundColor="Red"/>
-        <highlight-row condition="level == LogLevel.Fatal" foregroundColor="White" backgroundColor="Red"/>
+        <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
+        <highlight-row condition="level == LogLevel.Info" foregroundColor="Black" backgroundColor="DarkGreen" />
+        <highlight-row condition="level == LogLevel.Warn" foregroundColor="Black" backgroundColor="Yellow" />
+        <highlight-row condition="level == LogLevel.Error" foregroundColor="White" backgroundColor="Red" />
+        <highlight-row condition="level == LogLevel.Fatal" foregroundColor="White" backgroundColor="Red" />
       </target>
-      <target name="logfile" xsi:type="File" layout="${longdate} ${logger} ${message}" fileName="c:\HkwgConverter\Logs\logfile_${shortdate}.log"/>
+      <target name="logfile" xsi:type="File" layout="${longdate} ${logger} ${message}" fileName="c:\HkwgConverter\Logs\logfile_${shortdate}.log" />
     </targets>
     <rules>
-      <logger name="*" minlevel="Info" writeTo="logfile"/>
-      <logger name="*" minlevel="Info" writeTo="coloredConsole"/>
+      <logger name="*" minlevel="Info" writeTo="logfile" />
+      <logger name="*" minlevel="Info" writeTo="coloredConsole" />
     </rules>
   </nlog>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
     </startup>
     <applicationSettings>
         <HkwgConverter.Settings>
@@ -69,4 +69,12 @@
             </setting>
         </HkwgConverter.Settings>
     </applicationSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.5022.0" newVersion="2.0.5022.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
