--- a/HkwgConverter/packages.config
+++ b/HkwgConverter/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClosedXML" version="0.86.0" targetFramework="net452" />
-  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net452" />
-  <package id="NLog" version="4.4.3" targetFramework="net40-client" />
+  <package id="ClosedXML" version="0.86.0" targetFramework="net40-client" />
+  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net40-client" />
+  <package id="NLog" version="4.4.4" targetFramework="net40-client" />
 </packages>
