Small Change in template and prepation for business data config

--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -1,11 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+    <section name="businessSettings" type="HkwgConverter.Model.BusinessConfigurationSection, HkwgConverter"
+      />
+      <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="HkwgConverter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
+  <businessSettings geschäftsart="Intraday-FLEX">
+    <partnerEnviam  geschäftspartnername="enviaM" ansprechpartner="Warte" bilanzkreis="11XENVIAMBILANZD" />
+    <partnerCottbus geschäftspartnername="SW Cottbus" ansprechpartner="Herr Bars, Martin" bilanzkreis="11XSWCOTTBUS---M" />
+  </businessSettings>
   <system.diagnostics>
     <trace autoflush="true">
       <listeners>
