--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -8,9 +8,9 @@
             <section name="HkwgConverter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
-  <businessSettings geschäftsart="Intraday-FLEX">
-    <partnerEnviam  geschäftspartnername="enviaM" ansprechpartner="Warte" bilanzkreis="11XENVIAMBILANZD" />
-    <partnerCottbus geschäftspartnername="SW Cottbus" ansprechpartner="Herr Bars, Martin" bilanzkreis="11XSWCOTTBUS---M" />
+  <businessSettings geschaeftsart="Intraday-FLEX">
+    <partnerEnviam  geschaeftspartnername="enviaM" ansprechpartner="Warte" bilanzkreis="11XENVIAMBILANZD" />
+    <partnerCottbus geschaeftspartnername="SW Cottbus" ansprechpartner="Herr Bars, Martin" bilanzkreis="11XSWCOTTBUS---M" />
   </businessSettings>
   <system.diagnostics>
     <trace autoflush="true">
