--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -8,7 +8,7 @@
             <section name="HkwgConverter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
-  <businessSettings geschaeftsart="Intraday-FLEX">
+  <businessSettings geschaeftsart="Intraday-FLEX" konstanteLeistungProStunde="false">
     <partnerEnviam  geschaeftspartnername="enviaM" ansprechpartner="Warte" bilanzkreis="11XENVIAMBILANZD" />
     <partnerCottbus geschaeftspartnername="SW Cottbus" ansprechpartner="Herr Bars, Martin" bilanzkreis="11XSWCOTTBUS---M" />
   </businessSettings>
