--- a/HkwgConverter/HkwgConverter.csproj
+++ b/HkwgConverter/HkwgConverter.csproj
@@ -51,7 +51,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>enviam %281%29.ico</ApplicationIcon>
+    <ApplicationIcon>enviam.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Prod|AnyCPU'">
     <OutputPath>bin\Prod\</OutputPath>
@@ -122,12 +122,10 @@
     <None Include="packages.config" />
     <None Include="Sample\20170201_FLEXPOS_HKWG_01.xlsx" />
     <None Include="Sample\Anmeldung_20161212_11XSWCOTTBUS---M_11XENVIAMBILANZD_V0051.xlsx" />
-    <None Include="Sample\Beispieldateien.zip" />
     <None Include="Sample\copy_input.bat" />
     <None Include="Sample\input-neg-only.csv" />
     <None Include="Sample\input-pos-neg.csv" />
     <None Include="Sample\input-pos-only.csv" />
-    <None Include="Sample\OB_NewSchedule_20160705_20160704050122_+02.csv" />
     <None Include="Sample\outbound-beispiel.xlsx" />
     <None Include="Sample\Template_Kiss_Input.xlsx" />
     <None Include="Sample\Testverzeichnisse_anlegen.bat" />
@@ -155,12 +153,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="enviam %281%29.ico" />
     <Content Include="enviam.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Sample\root\Inbound\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
