Refactored to use SQL Server Compact and Entiity Framework for Transaction handling

--- a/HkwgConverter/App.config
+++ b/HkwgConverter/App.config
@@ -1,15 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="businessSettings" type="HkwgConverter.Model.BusinessConfigurationSection, HkwgConverter"
-      />
+    <section name="businessSettings" type="HkwgConverter.Model.BusinessConfigurationSection, HkwgConverter" />
       <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="HkwgConverter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
+  <connectionStrings>
+    <add name="transactionsDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Projekte\HkwgConverter\HkwgConverter\transactions.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />        
+  <!--  <add name="TransactionRepository" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\transactions.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>-->
+  <add name="TransactionRepository" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=D:\Projekte\HkwgConverter\HkwgConverter\transactions.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <businessSettings geschaeftsart="Intraday-FLEX" konstanteLeistungProStunde="false">
-    <partnerEnviam  geschaeftspartnername="enviaM" ansprechpartner="Warte" bilanzkreis="11XENVIAMBILANZD" />
+    <partnerEnviam geschaeftspartnername="enviaM" ansprechpartner="Warte" bilanzkreis="11XENVIAMBILANZD" />
     <partnerCottbus geschaeftspartnername="SW Cottbus" ansprechpartner="Herr Bars, Martin" bilanzkreis="11XSWCOTTBUS---M" />
   </businessSettings>
   <system.diagnostics>
@@ -21,9 +25,7 @@
     </trace>
   </system.diagnostics>
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-
-    <targets>
-   
+    <targets>   
       <target name="coloredConsole" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="false" layout="${longdate}|${pad:padding=5:inner=${level:uppercase=true}}|${message}">
         <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
         <highlight-row condition="level == LogLevel.Info" foregroundColor="Black" backgroundColor="DarkGreen" />
