--- a/HkwgConverter/packages.config
+++ b/HkwgConverter/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="ClosedXML" version="0.86.0" targetFramework="net40-client" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net40-client" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net40-client" />
+  <package id="EntityFramework.de" version="6.1.3" targetFramework="net40-client" />
   <package id="NLog" version="4.4.4" targetFramework="net40-client" />
 </packages>
